--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
   "version": 2,
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "regions": ["iad1"],
   "functions": {
     "api/*.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api-test",
+      "dest": "/api-test"
+    }
+  ]
 }
