--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astrojs/vercel": "^8.2.8",
     "@tailwindcss/vite": "^4.1.13",
+    "alpinejs": "^3.15.0",
     "astro": "^5.13.10",
+    "gsap": "^3.13.0",
     "tailwindcss": "^4.1.13"
   }
 }
