--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "framework": "astro",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev"
 }
